# traefik2pihole

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  traefik2pihole.py  uploadkeys.py
